Fixed a z-index issue with the hidden annotation 'track' (was sitting on top of the SVGs, so hover events weren't triggering).

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,7 @@ strong {
 	top: 0px;
     left: 50%;
     text-align: center;
-	z-index: 50;
+	z-index: -1;
 }
 
 .step {
@@ -79,6 +79,8 @@ strong {
 	min-height: 320px;
 	border-radius: 15px;
     opacity: 0.8;
+
+    z-index: 50;
 
     background-color: white;
     overflow: hidden;
